# C-plus-plus

LB_1/: CMakeLists.txt  LB_1_1.cpp  LB_1_2.cpp  ПР_1.txt
LB_10/: CMakeLists.txt  Task_1.cpp  Task_15.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  ПР_10.txt
LB_11/: CMakeLists.txt  Task_1.cpp  Task_2.cpp  ПР_11.txt
LB_17/: task1.cpp
LB_2/: CMakeLists.txt  Task_1.cpp  Task_2.cpp  ПР_2.txt
LB_24/: task1.cpp
LB_27/: task1.cpp
LB_3/: CMakeLists.txt  Task_1.cpp  Task_2.cpp  ПР_3.txt
LB_4/: CMakeLists.txt  Task_6.cpp  Task_7.cpp  Task_8.cpp  Task_9.cpp
LB_5/: CMakeLists.txt  Task_1.cpp  Task_2.cpp  Task_3.cpp  ПР_5.txt
LB_6/: CMakeLists.txt  Task_1.cpp  ПР_6.txt
LB_7/: CMakeLists.txt  Task_10.cpp  Task_6.cpp  Task_7.cpp
LB_8/: CMakeLists.txt  Task_1.cpp  Task_2.cpp  ПР_8.txt
LB_9/: CMakeLists.txt  Task_3.cpp  Task_4.cpp  Task_5.cpp  Task_6.cpp  ПР_9.txt
