cmake_minimum_required(VERSION 3.29)
project(LB_10)

set(CMAKE_CXX_STANDARD 14)

add_executable(LB_10_1 Task_1.cpp)
add_executable(LB_10_2 Task_2.cpp)
add_executable(LB_10_3 Task_3.cpp)
add_executable(LB_10_4 Task_4.cpp)
add_executable(LB_10_5 Task_5.cpp)
add_executable(LB_10_6 Task_6.cpp)
add_executable(LB_10_15 Task_15.cpp)

